feat: add travel
