# src/app.js
@@ -2,6 +2,7 @@ import express from "express";
 import passenger from "./controllers/passenger.js";
 import account from "./controllers/account.js";
 import driver from "./controllers/driver.js";
+import travel from "./controllers/travel.js";
 import privateRoute from "./middleware/privateRoute.js";
 import cors from "cors";
 import swaggerUi from "swagger-ui-express";
@@ -14,9 +15,10 @@ app.use(cors());
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use("/passenger",  passenger);
+app.use("/passenger", passenger);
 app.use("/account", account);
-app.use("/driver",driver);
+app.use("/driver", driver);
+app.use("/travel", travel);
 
 // Errors request - Put in a middleware
 app.use((req, res, next) => {
